--- a/mini-projects.html
+++ b/mini-projects.html
@@ -33,6 +33,7 @@
       <div class="item"> <img src="images/slider22.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider23.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider24.jpg" alt=""> </div>
+      <div class="item"> <img src="images/slider101.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider25.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider26.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider27.jpg" alt=""> </div>
