--- a/water-colors.html
+++ b/water-colors.html
@@ -17,8 +17,7 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-              <li><a href="watercolor.html">WaterColors</a></li>
-              
+              <li><a href="water-colors.html">WaterColors</a></li>              
           </ul>
         </nav>
       </div>
