--- a/water-colors.html
+++ b/water-colors.html
@@ -24,10 +24,16 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-        <div class="item"> <img src="images/slider76.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider77.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider78.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider79.jpg" alt=""> </div>
+	<div class="item"> <img src="images/watercolor/1_wildflowers.jpg"  	/>
+	<div class="item"> <img src="images/watercolor/2_grasses.jpg" 	 	/>	
+	<div class="item"> <img src="images/watercolor/3_shivalinga.jpg" 	/>
+	<div class="item"> <img src="images/watercolor/4_moody.jpg" 		/>
+	<div class="item"> <img src="images/watercolor/5_vignette.jpg" 	 	/>
+	<div class="item"> <img src="images/watercolor/6_garden.jpg" 		/>
+	<div class="item"> <img src="images/watercolor/7_flowers.jpg" 	 	/>
+	<div class="item"> <img src="images/watercolor/8_leaves.jpg" 		/>
+	<div class="item"> <img src="images/watercolor/9_circles.jpg" 	 	/>
+	<div class="item"> <img src="images/watercolor/10_feathers.jpg" 	/>
       </div>
     </div>
   </div>
