--- a/polo-sport.html
+++ b/polo-sport.html
@@ -19,7 +19,7 @@
         <nav class="sub-menu">
           <ul>
              <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
-              <li><a href="talbots-home-goods.html">Talbots Home Goods</a></li>
+              <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
               <li><a href="active-lauren-ralph-lauren.html">Active Lauren Ralph Lauren</a></li>
               <li class="active"><a href="polo-sport.html">Polo Sport</a></li>
