--- a/about.html
+++ b/about.html
@@ -23,14 +23,15 @@
     </section>
     <div class="about_blk w-100 float-left text-center bg-white">
       <div class="row">
-          <div class="col-lg-6 offset-lg-3 col-xs-12">
-		  <div class="about_img w-100 d-inline-block text-center"><img src="images/about_img.jpg" alt="" /></div>
-		  <a href="https://www.instagram.com/campoknits/" target="_blank" class="instagram">&nbsp;</a>
+          <div class="col-lg-6 offset-lg-3 col-xs-12">		  
 		  <div class="about_txt w-100 float-left">        
 		    <p>Based in Brooklyn, New York, Carolyn Campo has been living and designing in New York for the past 15 years. She channels the energy of the city in her work, exploring works in illustration, design and knitting.</p>
 		    <p>She has worked for notable companies Lyn Devon, Echo for Ralph Lauren and Talbots designing a wide range of products including sweaters and knits, printed scarves, cold weather accessories, home goods, and swim wear.</p>
 		    <p>Her design process is grounded in illustration, creating a mood and seeing every idea live from concept to production.</p>
+		    <p><a href="https://www.instagram.com/campoknits/" target="_blank" > Instagram </a></p>
+		    <p><a href="https://www.linkedin.com/in/carolyncampo" target="_blank" > LinkedIn </a></p>
 		  </div>
+		  <div class="about_img w-100 d-inline-block text-center"><img src="images/about_img.jpg" alt="" /></div>
         </div>
       </div>
       
