--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 	<table border = 0 width="100%" >
 		<tr>
 			<td>
-				<img src="about_img.jpg" alt="" height = 500 width= 350/>
+				<img src="images/about_img.jpg" alt="" height = 500 width= 350/>
 			</td>
 			<td>
 				<p>Based in Brooklyn, New York, Carolyn Campo has been living and designing in New York for the past 15 years. She channels the energy of the city in her work, exploring works in illustration, design and knitting.</p>
