--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
 				<img src="images/about_img.jpg" alt="" height = 500 width= 350/>
 			</td>
 			<td>
-				<p>Based in Brooklyn, New York, Carolyn Campo has been living and designing in New York for the past 15 years. She channels the energy of the city in her work, exploring works in illustration, design and knitting.</p>
-				<p>She has worked for notable companies Lyn Devon, Echo for Ralph Lauren and Talbots designing a wide range of products including sweaters and knits, printed scarves, cold weather accessories, home goods, and swim wear.</p>
-				<p>Her design process is grounded in illustration, creating a mood and seeing every idea live from concept to production.</p>
-				<p><a href="https://www.instagram.com/campoknits/" target="_blank" > Instagram </a> || 
+				<p>Based in Brooklyn, New York, Carolyn Campo has been living and designing in New York for the past 15 years. She channels the energy of the city in her work, exploring works in illustration, design and knitting.
+				She has worked for notable companies Lyn Devon, Echo for Ralph Lauren and Talbots designing a wide range of products including sweaters and knits, printed scarves, cold weather accessories, home goods, and swim wear.
+				Her design process is grounded in illustration, creating a mood and seeing every idea live from concept to production.</p>
+				<p><a href="https://www.instagram.com/campoknits/" target="_blank" > Instagram </a> |
 				<a href="https://www.linkedin.com/in/carolyncampo" target="_blank" > LinkedIn </a></p>					
 			</td>
 		</tr>
