--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>About</title>
+<title>WaterColors</title>
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
 </head>
@@ -16,31 +17,21 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-              <li class="active"><a href="about.html">About</a></li>
-            </ul>
+              <li><a href="water-colors.html">WaterColors</a></li>              
+          </ul>
         </nav>
       </div>
     </section>
- <div class="about_img w-100 d-inline-block text-center">
-	<table border = 0 width="100%" >
-		<tr>
-			<td>
-				<img src="images/about_img.jpg" alt="" height = 500 width= 350/>
-			</td>
-			<td>
-				<p>Based in Brooklyn, New York, Carolyn Campo has been living and designing in New York for the past 15 years. She channels the energy of the city in her work, exploring works in illustration, design and knitting.
-				She has worked for notable companies Lyn Devon, Echo for Ralph Lauren and Talbots designing a wide range of products including sweaters and knits, printed scarves, cold weather accessories, home goods, and swim wear.
-				Her design process is grounded in illustration, creating a mood and seeing every idea live from concept to production.</p>
-				<p><a href="https://www.instagram.com/campoknits/" target="_blank" > Instagram </a> |
-				<a href="https://www.linkedin.com/in/carolyncampo" target="_blank" > LinkedIn </a></p>					
-			</td>
-		</tr>
-	</table>			
-   </div>
-    
+    <div class="slider_outer w-100 float-left pb-5">
+    <div class="owl-carousel slides">
+	<div class="item"> <img src="images/about_img.jpg"      /></div> 
+      </div>
+    </div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script> 
+<script src="js/OwlCarousel2Thumbs.min.js"></script> 
 <script>
  function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
@@ -51,6 +42,18 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("mobile_nav").style.marginLeft= "0";
 }
+</script> 
+<script>
+    var owl = $('.slides');
+    owl.owlCarousel({
+        loop: true,
+		dots:false,
+        items: 1,
+        thumbs: true,
+        thumbImage: true,
+        thumbContainerClass: 'owl-thumbs',
+        thumbItemClass: 'owl-thumb-item'
+    });
 </script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -71,6 +74,5 @@ $(window).scroll(function() {
     }
 });
 </script>
-</body>
 </body>
 </html>
