--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-              <li><a href="water-colors.html">WaterColors</a></li>              
+              <li><a href="about.html">About</a></li>              
           </ul>
         </nav>
       </div>
