--- a/mini-projects.html
+++ b/mini-projects.html
@@ -19,7 +19,7 @@
         <nav class="sub-menu">
           <ul>
             <li><a href="sketches.html">Sketchbook</a></li>
-            <li><a href="lyn-devon.html">Lyn Devon</a></li>
+            <li><a href="for-lyn-devon.html">For Lyn Devon</a></li>
             <li><a href="as-seen-in.html">As Seen In</a></li>
             <li class="active"><a href="mini-projects.html">Mini Projects</a></li>
           </ul>
