--- a/talbots-home-goods.html
+++ b/talbots-home-goods.html
@@ -32,6 +32,7 @@
         <div class="item"> <img src="images/slider45.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider46.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider47.jpg" alt=""> </div>
+	<div class="item"> <img src="images/redgoods.jpg" alt=""> </div>
       </div>
     </div>
   </div>
