--- a/water-colors.html
+++ b/water-colors.html
@@ -26,9 +26,11 @@
     <div class="owl-carousel slides">
 	<div class="item"> <img src="images/watercolors/Floral_Coral Peonies.jpg"      /></div>
 	<div class="item"> <img src="images/watercolors/Floral_Big Bloom.jpg"      /></div>
+	<div class="item"> <img src="images/watercolors/Floral_Dainty.jpg"      /></div>
+	<div class="item"> <img src="images/watercolors/Floral_Bouquet Dipdict.jpg"      /></div>
+	<div class="item"> <img src="images/watercolors/Floral_Green Dipdict.jpg"      /></div>
 	<div class="item"> <img src="images/watercolors/1_wildflowers.jpg"      /></div> 
 	<div class="item"> <img src="images/watercolors/2_grasses.jpg" 	 	/></div> 	
-	<div class="item"> <img src="images/watercolors/3_shivalinga.jpg" 	/></div>
 	<div class="item"> <img src="images/watercolors/15_redleaves.jpg"       /></div>
 	<div class="item"> <img src="images/watercolors/16_poppies.jpg"         /></div>
 	<div class="item"> <img src="images/watercolors/17_tiles.jpg"           /></div>
@@ -38,10 +40,11 @@
 	<div class="item"> <img src="images/watercolors/mossy.jpg" 		/></div>
 	<div class="item"> <img src="images/watercolors/flourish.jpg" 	        /></div> 
 	<div class="item"> <img src="images/watercolors/6_garden.jpg" 		/></div>  
-	<div class="item"> <img src="images/watercolors/8_leaves.jpg" 		/></div>
-	<div class="item"> <img src="images/watercolors/9_circles.jpg" 	 	/></div> 
 	<div class="item"> <img src="images/watercolors/12_abstract.jpg" 	/></div>
 	<div class="item"> <img src="images/watercolors/13_japanese.jpg" 	/></div>
+	<div class="item"> <img src="images/watercolors/Landscape_Field.jpg"      /></div>
+	<div class="item"> <img src="images/watercolors/Landscape_Pink Dipdict.jpg"      /></div>
+	<div class="item"> <img src="images/watercolors/Landscape_Purple.jpg"      /></div>
       </div>
     </div>
   </div>
