--- a/talbots-accessories-swim.html
+++ b/talbots-accessories-swim.html
@@ -36,10 +36,10 @@
         <div class="item"> <img src="images/slider35.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider36.jpg" alt=""> </div>
 	<div class="item"> <img src="images/slider39.jpg" alt=""> </div>
-	<div class="item"> <img src="B&W.jpg" alt=""> </div>
-	<div class="item"> <img src="Heritage_Wine-Navy.jpg" alt=""> </div>
-	<div class="item"> <img src="Autumn_Brown-Black.jpg" alt=""> </div>
-	<div class="item"> <img src="Teal.jpg" alt=""> </div>
+	<div class="item"> <img src="images/black.jpg" alt=""> </div>
+	<div class="item"> <img src="images/heritage.jpg" alt=""> </div>
+	<div class="item"> <img src="images/autumn_.jpg" alt=""> </div>
+	<div class="item"> <img src="images/teal.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider40.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider41.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider42.jpg" alt=""> </div>
