--- a/talbots-accessories-swim.html
+++ b/talbots-accessories-swim.html
@@ -38,7 +38,7 @@
 	<div class="item"> <img src="images/slider39.jpg" alt=""> </div>
 	<div class="item"> <img src="images/black.jpg" alt=""> </div>
 	<div class="item"> <img src="images/heritage.jpg" alt=""> </div>
-	<div class="item"> <img src="images/autumn_.jpg" alt=""> </div>
+	<div class="item"> <img src="images/austumn_.jpg" alt=""> </div>
 	<div class="item"> <img src="images/teal.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider40.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider41.jpg" alt=""> </div>
