--- a/digital.html
+++ b/digital.html
@@ -28,6 +28,7 @@
 	<div class="item"> <img src="images/digital/Domestika.jpg"      /></div>
 	<div class="item"> <img src="images/digital/Cheers.jpg"      /></div>	
         <div class="item"> <img src="images/digital/weddingProgram.jpg"      /></div>
+	<div class="item"> <img src="images/digital/Polosporttag.jpg"      /></div>
 
       </div>
     </div>
