--- a/mini-projects.html
+++ b/mini-projects.html
@@ -28,6 +28,7 @@
     </section>
   <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
+      <div class="item"> <img src="images/MDLR.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider20.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider21.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider22.jpg" alt=""> </div>
