--- a/mini-projects.html
+++ b/mini-projects.html
@@ -32,7 +32,7 @@
       <div class="item"> <img src="images/slider20.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider21.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider22.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider23.jpg" alt=""> </div>
+      <div class="item"> <img src="images/MensSketchesBackground.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider24.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider101.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider25.jpg" alt=""> </div>
