--- a/talbots-accessories-swim.html
+++ b/talbots-accessories-swim.html
@@ -29,21 +29,19 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-        <div class="item"> <img src="images/slider31.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider32.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider33.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider34.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider35.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider36.jpg" alt=""> </div>
-	<div class="item"> <img src="images/slider39.jpg" alt=""> </div>
+        <div class="item"> <img src="images/cwblack.jpg" alt=""> </div>
+        <div class="item"> <img src="images/cwred.jpg" alt=""> </div>
+        <div class="item"> <img src="images/cwsoft.jpg" alt=""> </div>
+        <div class="item"> <img src="images/cwblue.jpg" alt=""> </div>
+	<div class="item"> <img src="images/cwnatural.jpg" alt=""> </div>
 	<div class="item"> <img src="images/black.jpg" alt=""> </div>
 	<div class="item"> <img src="images/heritage.jpg" alt=""> </div>
 	<div class="item"> <img src="images/austumn.jpg" alt=""> </div>
 	<div class="item"> <img src="images/teal.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider40.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider41.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider42.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider43.jpg" alt=""> </div>
+        <div class="item"> <img src="images/swimblack.jpg" alt=""> </div>
+        <div class="item"> <img src="images/swimturq.jpg" alt=""> </div>
+        <div class="item"> <img src="images/swimblue.jpg" alt=""> </div>
+        <div class="item"> <img src="images/swimorange.jpg" alt=""> </div>
 
       </div>
      
