--- a/talbots-home-goods.html
+++ b/talbots-home-goods.html
@@ -29,10 +29,10 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
       <div class="owl-carousel slides">
-        <div class="item"> <img src="images/slider45.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider46.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider47.jpg" alt=""> </div>
-	<div class="item"> <img src="images/redgoods.jpg" alt=""> </div>
+        <div class="item"> <img src="images/homeblue.jpg" alt=""> </div>
+        <div class="item"> <img src="images/homesoft.jpg" alt=""> </div>
+        <div class="item"> <img src="images/homegreen.jpg" alt=""> </div>
+	<div class="item"> <img src="images/homered.jpg" alt=""> </div>
       </div>
     </div>
   </div>
