--- a/polo-sport.html
+++ b/polo-sport.html
@@ -31,6 +31,10 @@
       <div class="owl-carousel slides">
         <div class="item"> <img src="images/slider61.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider62.jpg" alt=""> </div>
+	<div class="item"> <img src="images/POLOSPORT.jpg" alt=""> </div>
+	<div class="item"> <img src="images/POLOSPORT2.jpg" alt=""> </div>
+	<div class="item"> <img src="images/pologlovecard.jpg" alt=""> </div>
+	<div class="item"> <img src="images/pologlovecard2.jpg" alt=""> </div>
       </div>
     </div>
   </div>
