--- a/active-lauren-ralph-lauren.html
+++ b/active-lauren-ralph-lauren.html
@@ -30,8 +30,10 @@
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
 	<div class="item"> <img src="images/activecover.jpg" alt=""> </div>
+	<div class="item"> <img src="images/active.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active1.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active2.jpg" alt=""> </div>
+	<div class="item"> <img src="images/active3.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider57.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider58.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider59.jpg" alt=""> </div>
