--- a/active-lauren-ralph-lauren.html
+++ b/active-lauren-ralph-lauren.html
@@ -32,7 +32,9 @@
 	<div class="item"> <img src="images/activecover.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active1.jpg" alt=""> </div>
+	<div class="item"> <img src="images/active2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active3.jpg" alt=""> </div>
+	<div class="item"> <img src="images/active4.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider57.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider58.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider59.jpg" alt=""> </div>
