--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="content-head">
 	  </div>
     <div class="main_content w-100 float-left bg-white">
-    <div class="feature_img w-100 float-left position-relative"><img src="images/sketch_img.jpg" alt=""  />
+    <div class="feature_img w-100 float-left position-relative"><img src="images/homepage.jpg" alt=""  />
     </div>
     </div>
   </div>
