--- a/digital.html
+++ b/digital.html
@@ -18,7 +18,7 @@
         <nav class="sub-menu">
           <ul>
 		  <li><a href="water-colors.html">WaterColors</a></li>      
-		  <li><a href="digital.html">Digital</a></li>   
+		  <li><a href="stationery.html">Stationery</a></li>   
           </ul>
         </nav>
       </div>
