--- a/water-colors.html
+++ b/water-colors.html
@@ -17,8 +17,8 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-		  <li><a href="water-colors.html">WaterColors</a></li>      
-		  <li><a href="digital.html">Digital</a></li>   
+		  <li><a href="paintings.html">Paintings</a></li>      
+		  <li><a href="stationery.html">Stationery</a></li>   
           </ul>
         </nav>
       </div>
