--- a/paintings.html
+++ b/paintings.html
@@ -25,6 +25,7 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
+	<div class="item"> <img src="images/domestika.jpg"      /></div>
 	<div class="item"> <img src="images/watercolors/Floral_Coral Peonies.jpg"      /></div>
 	<div class="item"> <img src="images/watercolors/Floral_Big Bloom.jpg"      /></div>
 	<div class="item"> <img src="images/watercolors/1_wildflowers.jpg"      /></div>
