--- a/stationery.html
+++ b/stationery.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Digital Art</title>
+<title>Stationery</title>
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -25,7 +25,6 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-	<div class="item"> <img src="images/digital/Domestika.jpg"      /></div>
 	<div class="item"> <img src="images/digital/Cheers.jpg"      /></div>	
 	<div class="item"> <img src="images/digital/weddingProgram.jpg"      /></div>
 
