--- a/paintings.html
+++ b/paintings.html
@@ -26,10 +26,21 @@
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
 	<div class="item"> <img src="images/domestika.jpg"      /></div>
-	<div class="item"> <img src="images/watercolors/Floral_Coral Peonies.jpg"      /></div>
-	<div class="item"> <img src="images/watercolors/Floral_Big Bloom.jpg"      /></div>
-	<div class="item"> <img src="images/watercolors/1_wildflowers.jpg"      /></div>
-	<div class="item"> <img src="images/watercolors/6_garden.jpg" 		/></div> 
+	<div class="item"> <img src="images/garden.jpg"      /></div>
+	<div class="item"> <img src="images/peonies.jpg"      /></div>
+	<div class="item"> <img src="images/bloom.jpg"      /></div>
+	<div class="item"> <img src="images/degas.jpg" 		/></div> 
+	<div class="item"> <img src="images/delicate.jpg" 		/></div> 
+	<div class="item"> <img src="images/moody.jpg" 		/></div> 
+	<div class="item"> <img src="images/snowy.jpg" 		/></div> 
+	<div class="item"> <img src="images/vintage.jpg" 		/></div> 
+	<div class="item"> <img src="images/impressy.jpg" 		/></div> 
+	<div class="item"> <img src="images/scarlett.jpg" 		/></div> 
+	<div class="item"> <img src="images/tropical.jpg" 		/></div>
+	<div class="item"> <img src="images/hibiscus.jpg" 		/></div>
+	<div class="item"> <img src="images/autumn.jpg" 		/></div> 
+	<div class="item"> <img src="images/waves.jpg" 		/></div> 
+	<div class="item"> <img src="images/wildflowers.jpg" 		/></div> 
       </div>
     </div>
   </div>
