--- a/stationery.html
+++ b/stationery.html
@@ -25,8 +25,14 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-	<div class="item"> <img src="images/digital/Cheers.jpg"      /></div>	
-	<div class="item"> <img src="images/digital/weddingProgram.jpg"      /></div>
+	<div class="item"> <img src="images/station.jpg"      /></div>	
+	<div class="item"> <img src="images/station1.jpg"      /></div>
+        <div class="item"> <img src="images/station2.jpg"      /></div>
+	<div class="item"> <img src="images/station3.jpg"      /></div>
+	<div class="item"> <img src="images/station4.jpg"      /></div>
+	<div class="item"> <img src="images/station5.jpg"      /></div>
+	<div class="item"> <img src="images/station6.jpg"      /></div>
+	<div class="item"> <img src="images/station7.jpg"      /></div>
 
       </div>
     </div>
