--- a/stationery.html
+++ b/stationery.html
@@ -25,6 +25,7 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
+	<div class="item"> <img src="images/station8.jpg"      /></div>
 	<div class="item"> <img src="images/station.jpg"      /></div>	
 	<div class="item"> <img src="images/station1.jpg"      /></div>
         <div class="item"> <img src="images/station2.jpg"      /></div>
