--- a/sketches.html
+++ b/sketches.html
@@ -33,6 +33,9 @@
 	<div class="item"> <img src="images/slider3.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider5.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider6.jpg" alt=""> </div>
+	<div class="item"> <img src="images/sketch1.jpg" alt=""> </div>
+	<div class="item"> <img src="images/loveletter1.jpg" alt=""> </div>
+	<div class="item"> <img src="images/loveletter2.jpg" alt=""> </div>
       </div>
     </div>
   </div>
