--- a/active-lauren-ralph-lauren.html
+++ b/active-lauren-ralph-lauren.html
@@ -35,10 +35,9 @@
 	<div class="item"> <img src="images/active2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active3.jpg" alt=""> </div>
 	<div class="item"> <img src="images/active4.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider57.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider58.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider59.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider60.jpg" alt=""> </div>
+        <div class="item"> <img src="images/activeproduct2.jpg" alt=""> </div>
+        <div class="item"> <img src="images/activeproduct3.jpg" alt=""> </div>
+        <div class="item"> <img src="images/activeproduct4.jpg" alt=""> </div>
       </div>
     </div>
   </div>
