Update and rename L-RL.html to L RL.html

--- a/L RL.html
+++ b/L RL.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>L-RL</title>
+<title>L RL</title>
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -21,7 +21,7 @@
              <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
               <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
-              <li class="active"><a href="l-rl.html">L-RL</a></li>
+              <li class="active"><a href="l-rl.html">L RL</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
           </ul>
         </nav>
