--- a/talbots-home-goods.html
+++ b/talbots-home-goods.html
@@ -21,7 +21,7 @@
              <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
               <li class="active"><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
-              <li><a href="l-rl.html">Active Lauren Ralph Lauren</a></li>
+              <li><a href="l-rl.html">L RL</a></li>
               <li><a href="polo-sport.html">Polo Sport</a></li>
           </ul>
         </nav>
