--- a/polo-sport.html
+++ b/polo-sport.html
@@ -29,8 +29,8 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
       <div class="owl-carousel slides">
-        <div class="item"> <img src="images/slider61.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider62.jpg" alt=""> </div>
+        <div class="item"> <img src="images/polosportglove1.jpg" alt=""> </div>
+        <div class="item"> <img src="images/polosportheadband1.jpg" alt=""> </div>
 	<div class="item"> <img src="images/POLOSPORT1.jpg" alt=""> </div>
 	<div class="item"> <img src="images/POLOSPORT2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/pologlovecard.jpg" alt=""> </div>
