--- a/lauren-ralph-lauren.html
+++ b/lauren-ralph-lauren.html
@@ -29,15 +29,10 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-        <div class="item"> <img src="images/slider48.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider49.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider50.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider51.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider52.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider53.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider54.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider55.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider56.jpg" alt=""> </div>
+        <div class="item"> <img src="images/laurenglove1.jpg" alt=""> </div>
+        <div class="item"> <img src="images/laurenglove2.jpg" alt=""> </div>
+        <div class="item"> <img src="images/laurenglove3.jpg" alt=""> </div>
+	<div class="item"> <img src="images/laurenglove4.jpg" alt=""> </div>
       </div>
     </div>
   </div>
