--- a/polo-sport.html
+++ b/polo-sport.html
@@ -18,8 +18,7 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-             <li><a href="talbots-accessories-swim.html">Talbots Accessories & Swim</a></li>
-              <li><a href="talbots-home-goods.html">Talbots Home & Sleep</a></li>
+             <li><a href="talbots.html">Talbots</a></li>
               <li><a href="lauren-ralph-lauren.html">Lauren Ralph Lauren</a></li>
               <li><a href="l-rl.html">L RL</a></li>
               <li class="active"><a href="polo-sport.html">Polo Sport</a></li>
