--- a/talbots.html
+++ b/talbots.html
@@ -41,6 +41,10 @@
         <div class="item"> <img src="images/swimturq.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblue.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimorange.jpg" alt=""> </div>
+	<div class="item"> <img src="images/homeblue.jpg" alt=""> </div>
+        <div class="item"> <img src="images/homesoft.jpg" alt=""> </div>
+	<div class="item"> <img src="images/homegreen.jpg" alt=""> </div>
+	<div class="item"> <img src="images/homered.jpg" alt=""> </div>
 
       </div>
      
