--- a/mini-projects.html
+++ b/mini-projects.html
@@ -38,9 +38,7 @@
       <div class="item"> <img src="images/slider25.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider26.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider27.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider28.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider29.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider30.jpg" alt=""> </div>
+      <div class="item"> <img src="images/shadowflorals.jpg" alt=""> </div>
     </div>
   </div>
 </div>
