--- a/mini-projects.html
+++ b/mini-projects.html
@@ -39,6 +39,7 @@
       <div class="item"> <img src="images/slider26.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider27.jpg" alt=""> </div>
       <div class="item"> <img src="images/shadowflorals.jpg" alt=""> </div>
+      <div class="item"> <img src="images/mscoco.jpg" alt=""> </div>
     </div>
   </div>
 </div>
