--- a/mini-projects.html
+++ b/mini-projects.html
@@ -35,9 +35,7 @@
       <div class="item"> <img src="images/MensSketchesBackground.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider24.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider101.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider25.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider26.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider27.jpg" alt=""> </div>
+      <div class="item"> <img src="images/american.jpg" alt=""> </div>
       <div class="item"> <img src="images/shadowflorals.jpg" alt=""> </div>
       <div class="item"> <img src="images/mscoco.jpg" alt=""> </div>
     </div>
