--- a/mini-projects.html
+++ b/mini-projects.html
@@ -33,8 +33,7 @@
       <div class="item"> <img src="images/slider21.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider22.jpg" alt=""> </div>
       <div class="item"> <img src="images/MensSketchesBackground.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider24.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider101.jpg" alt=""> </div>
+      <div class="item"> <img src="images/harbour.jpg" alt=""> </div>
       <div class="item"> <img src="images/american.jpg" alt=""> </div>
       <div class="item"> <img src="images/shadowflorals.jpg" alt=""> </div>
       <div class="item"> <img src="images/mscoco.jpg" alt=""> </div>
