--- a/mini-projects.html
+++ b/mini-projects.html
@@ -31,8 +31,7 @@
       <div class="item"> <img src="images/MDLR.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider20.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider21.jpg" alt=""> </div>
-      <div class="item"> <img src="images/slider22.jpg" alt=""> </div>
-      <div class="item"> <img src="images/MensSketchesBackground.jpg" alt=""> </div>
+      <div class="item"> <img src="images/highlands.jpg" alt=""> </div>
       <div class="item"> <img src="images/harbour.jpg" alt=""> </div>
       <div class="item"> <img src="images/american.jpg" alt=""> </div>
       <div class="item"> <img src="images/shadowflorals.jpg" alt=""> </div>
