Update and rename stanton-street-collection.html to hand-knits.html

--- a/hand-knits.html
+++ b/hand-knits.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Stanton Street Collection</title>
+<title>Hand Knits</title>
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -18,7 +18,7 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-              <li class="active"><a href="stanton-street-collection.html">Stanton Street Collection</a></li>
+              <li class="active"><a href="hand-knits.html">Hand Knits</a></li>
               <li><a href="apparel.html">Apparel</a></li>
           </ul>
         </nav>
