--- a/sketches.html
+++ b/sketches.html
@@ -28,6 +28,8 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
       <div class="owl-carousel slides">
+	<div class="item"> <img src="images/book1.jpg" alt=""> </div>
+	<div class="item"> <img src="images/book2.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider1.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/slider3.jpg" alt=""> </div>
