--- a/sketches.html
+++ b/sketches.html
@@ -30,6 +30,7 @@
       <div class="owl-carousel slides">
 	<div class="item"> <img src="images/book1.jpg" alt=""> </div>
 	<div class="item"> <img src="images/book2.jpg" alt=""> </div>
+	<div class="item"> <img src="images/dotty.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider1.jpg" alt=""> </div>
         <div class="item"> <img src="images/slider2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/slider3.jpg" alt=""> </div>
