--- a/sketches.html
+++ b/sketches.html
@@ -32,6 +32,7 @@
 	<div class="item"> <img src="images/book2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/dotty.jpg" alt=""> </div>
 	<div class="item"> <img src="images/giles.jpg" alt=""> </div>
+	<div class="item"> <img src="images/pom pom.jpg" alt=""> </div>
 	<div class="item"> <img src="images/slider1.jpg" alt=""> </div>
 	<div class="item"> <img src="images/slider3.jpg" alt=""> </div>
 	<div class="item"> <img src="images/sketch1.jpg" alt=""> </div>
