--- a/sketches.html
+++ b/sketches.html
@@ -29,6 +29,7 @@
     <div class="slider_outer w-100 float-left pb-5">
       <div class="owl-carousel slides">
 	<div class="item"> <img src="images/book1.jpg" alt=""> </div>
+	<div class="item"> <img src="images/creepy.jpg" alt=""> </div>
 	<div class="item"> <img src="images/book2.jpg" alt=""> </div>
 	<div class="item"> <img src="images/dotty.jpg" alt=""> </div>
 	<div class="item"> <img src="images/giles.jpg" alt=""> </div>
