Update and rename sketches.html to sketchbook.html

--- a/sketchbook.html
+++ b/sketchbook.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Sketches</title>
+<title>Sketchbook</title>
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -18,10 +18,10 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-            <li class="active"><a href="sketches.html">Sketchbook</a></li>
+            <li class="active"><a href="sketchbook.html">Sketchbook</a></li>
+            <li><a href="illustrated-projects.html">Illustrated Projects</a></li>
             <li><a href="for-lyn-devon.html">For Lyn Devon</a></li>
             <li><a href="as-seen-in.html">As Seen In</a></li>
-            <li><a href="mini-projects.html">Mini Projects</a></li>
           </ul>
         </nav>
       </div>
