Update and rename mini-projects.html to illustrated-projects.html

--- a/illustrated-projects.html
+++ b/illustrated-projects.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Mini Projects</title>
+<title>Illustrated Projects</title>
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -18,25 +18,24 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-            <li><a href="sketches.html">Sketchbook</a></li>
+            <li><a href="sketchbook.html">Sketchbook</a></li>
+	    <li class="active"><a href="illustrated-projects.html">Illustrated Projects</a></li>
             <li><a href="for-lyn-devon.html">For Lyn Devon</a></li>
             <li><a href="as-seen-in.html">As Seen In</a></li>
-            <li class="active"><a href="mini-projects.html">Mini Projects</a></li>
           </ul>
         </nav>
       </div>
     </section>
   <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-      <div class="item"> <img src="images/MDLR.jpg" alt=""> </div>
       <div class="item"> <img src="images/oldschool1.jpg" alt=""> </div>
       <div class="item"> <img src="images/gypsy.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider20.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider21.jpg" alt=""> </div>
       <div class="item"> <img src="images/highlands.jpg" alt=""> </div>
       <div class="item"> <img src="images/harbour.jpg" alt=""> </div>
+      <div class="item"> <img src="images/MDLR.jpg" alt=""> </div>
       <div class="item"> <img src="images/american.jpg" alt=""> </div>
-      <div class="item"> <img src="images/shadowflorals.jpg" alt=""> </div>
       <div class="item"> <img src="images/mscoco.jpg" alt=""> </div>
     </div>
   </div>
