--- a/for-lyn-devon.html
+++ b/for-lyn-devon.html
@@ -19,9 +19,9 @@
         <nav class="sub-menu">
           <ul>
             <li><a href="sketches.html">Sketchbook</a></li>
+            <li><a href="illustrated-projects.html">Illustrated Projects</a></li>
             <li class="active"><a href="for-lyn-devon.html">For Lyn Devon</a></li>
             <li><a href="as-seen-in.html">As Seen In</a></li>
-            <li><a href="mini-projects.html">Mini Projects</a></li>
           </ul>
         </nav>
       </div>
