--- a/as-seen-in.html
+++ b/as-seen-in.html
@@ -18,10 +18,11 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-            <li><a href="sketches.html">Sketchbook</a></li>
+            <li><a href="sketchbook.html">Sketchbook</a></li>
+            <li><a href="illustrated-projects.html">Illustrated Projects</a></li>
             <li><a href="for-lyn-devon.html">For Lyn Devon</a></li>
             <li class="active"><a href="as-seen-in.html">As Seen In</a></li>
-            <li><a href="mini-projects.html">Mini Projects</a></li>
+            
           </ul>
         </nav>
       </div>
