--- a/for-lyn-devon.html
+++ b/for-lyn-devon.html
@@ -18,7 +18,7 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-            <li><a href="sketches.html">Sketchbook</a></li>
+            <li><a href="sketchbook.html">Sketchbook</a></li>
             <li><a href="illustrated-projects.html">Illustrated Projects</a></li>
             <li class="active"><a href="for-lyn-devon.html">For Lyn Devon</a></li>
             <li><a href="as-seen-in.html">As Seen In</a></li>
