--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-	<div class="item"> <img src="images/about_page_2021.jpg"      /></div> 
+	<div class="item"> <img src="images/about2021.jpg"      /></div> 
       </div>
     </div>
   </div>
