--- a/paintings.html
+++ b/paintings.html
@@ -25,6 +25,7 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
+	<div class="item"> <img src="images/paintings.jpg"      /></div>
 	<div class="item"> <img src="images/garden.jpg"      /></div>
 	<div class="item"> <img src="images/peonies.jpg"      /></div>
 	<div class="item"> <img src="images/bloom.jpg"      /></div>
