--- a/illustrated-projects.html
+++ b/illustrated-projects.html
@@ -36,6 +36,8 @@
       <div class="item"> <img src="images/harbour.jpg" alt=""> </div>
       <div class="item"> <img src="images/MDLR.jpg" alt=""> </div>
       <div class="item"> <img src="images/american.jpg" alt=""> </div>
+      <div class="item"> <img src="images/loveletter1.jpg" alt=""> </div>
+      <div class="item"> <img src="images/loveletter2.jpg" alt=""> </div>
     </div>
   </div>
 </div>
