--- a/paintings.html
+++ b/paintings.html
@@ -17,7 +17,8 @@
       <div id="subMenu">
         <nav class="sub-menu">
           <ul>
-		  <li><a href="paintings.html">Paintings</a></li>      
+		  <li><a href="paintings.html">Paintings</a></li>
+		  <li><a href="prints.html">Prints</a></li> 
 		  <li><a href="stationery.html">Stationery</a></li>   
           </ul>
         </nav>
