--- a/prints.html
+++ b/prints.html
@@ -28,7 +28,8 @@
     <div class="owl-carousel slides">
 	<div class="item"> <img src="images/FRIDA.jpg"      /></div>
 	<div class="item"> <img src="images/FRIDA2.jpg"       /></div>
-        <div class="item"> <img src="images/MONSTERA.jpg"       /></div>	
+        <div class="item"> <img src="images/MONSTERA.jpg"       /></div>
+	<div class="item"> <img src="images/MONSTERA2.jpg"       /></div>
 
       </div>
     </div>
