--- a/prints.html
+++ b/prints.html
@@ -30,6 +30,8 @@
 	<div class="item"> <img src="images/FRIDA2.jpg"       /></div>
         <div class="item"> <img src="images/MONSTERA.jpg"       /></div>
 	<div class="item"> <img src="images/MONSTERA2.jpg"       /></div>
+	<div class="item"> <img src="images/WILD.jpg"       /></div>
+	<div class="item"> <img src="images/WILD2.jpg"       /></div>
 
       </div>
     </div>
