--- a/illustrated-projects.html
+++ b/illustrated-projects.html
@@ -28,6 +28,8 @@
     </section>
   <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
+      <div class="item"> <img src="images/punch.jpg" alt=""> </div>
+      <div class="item"> <img src="images/punch2.jpg" alt=""> </div>
       <div class="item"> <img src="images/oldschool1.jpg" alt=""> </div>
       <div class="item"> <img src="images/gypsy.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider20.jpg" alt=""> </div>
