--- a/illustrated-projects.html
+++ b/illustrated-projects.html
@@ -32,6 +32,7 @@
       <div class="item"> <img src="images/punch2.jpg" alt=""> </div>
       <div class="item"> <img src="images/punch3.jpg" alt=""> </div>
       <div class="item"> <img src="images/mary.jpg" alt=""> </div>
+      <div class="item"> <img src="images/mary2.jpg" alt=""> </div>
       <div class="item"> <img src="images/oldschool1.jpg" alt=""> </div>
       <div class="item"> <img src="images/gypsy.jpg" alt=""> </div>
       <div class="item"> <img src="images/slider20.jpg" alt=""> </div>
