--- a/illustrated-projects.html
+++ b/illustrated-projects.html
@@ -32,7 +32,8 @@
       <div class="item"> <img src="images/punch2.jpg" alt=""> </div>
       <div class="item"> <img src="images/punch3.jpg" alt=""> </div>
       <div class="item"> <img src="images/mary.jpg" alt=""> </div>
-      <div class="item"> <img src="images/mary2.jpg" alt=""> </div>
+      <div class="item"> <img src="images/mary2a.jpg" alt=""> </div>
+      <div class="item"> <img src="images/mary3.jpg" alt=""> </div>
       <div class="item"> <img src="images/oldschool1.jpg" alt=""> </div>
       <div class="item"> <img src="images/gypsy.jpg" alt=""> </div>
       <div class="item"> <img src="images/highlands.jpg" alt=""> </div>
