--- a/illustrated-projects.html
+++ b/illustrated-projects.html
@@ -36,11 +36,11 @@
       <div class="item"> <img src="images/mary3.jpg" alt=""> </div>
       <div class="item"> <img src="images/ansel.jpg" alt=""> </div>
       <div class="item"> <img src="images/ansel2.jpg" alt=""> </div>
+      <div class="item"> <img src="images/ansel3.jpg" alt=""> </div>
       <div class="item"> <img src="images/oldschool1.jpg" alt=""> </div>
       <div class="item"> <img src="images/gypsy.jpg" alt=""> </div>
-      <div class="item"> <img src="images/harbour.jpg" alt=""> </div>
       <div class="item"> <img src="images/MDLR.jpg" alt=""> </div>
-      <div class="item"> <img src="images/american.jpg" alt=""> </div>
+      <div class="item"> <img src="images/harbour.jpg" alt=""> </div>
     </div>
   </div>
 </div>
