--- a/for-lyn-devon.html
+++ b/for-lyn-devon.html
@@ -28,13 +28,14 @@
     </section>
     <div class="slider_outer w-100 float-left pb-5">
     <div class="owl-carousel slides">
-        <div class="item"> <img src="images/slider7.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider8.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider9.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider10.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider11.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider12.jpg" alt=""> </div>
-        <div class="item"> <img src="images/slider13.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn1.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn2.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn3.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn4.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn5.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn6.jpg" alt=""> </div>
+        <div class="item"> <img src="images/lyn7.jpg" alt=""> </div>
+	<div class="item"> <img src="images/lyn8.jpg" alt=""> </div>
       </div>
     </div>
   </div>
