--- a/for-lyn-devon.html
+++ b/for-lyn-devon.html
@@ -34,6 +34,8 @@
         <div class="item"> <img src="images/lyn3.jpg" alt=""> </div>
         <div class="item"> <img src="images/lyn5.jpg" alt=""> </div>
         <div class="item"> <img src="images/lyn6.jpg" alt=""> </div>
+	<div class="item"> <img src="images/lyn9.jpg" alt=""> </div>
+	<div class="item"> <img src="images/lyn10.jpg" alt=""> </div>
         <div class="item"> <img src="images/lyn7.jpg" alt=""> </div>
 	<div class="item"> <img src="images/lyn8.jpg" alt=""> </div>
       </div>
