--- a/talbots.html
+++ b/talbots.html
@@ -33,10 +33,12 @@
         <div class="item"> <img src="images/cwsoft.jpg" alt=""> </div>
         <div class="item"> <img src="images/cwblue.jpg" alt=""> </div>
 	<div class="item"> <img src="images/cwnatural.jpg" alt=""> </div>
-	<div class="item"> <img src="images/black.jpg" alt=""> </div>
-	<div class="item"> <img src="images/heritage.jpg" alt=""> </div>
-	<div class="item"> <img src="images/austumn.jpg" alt=""> </div>
-	<div class="item"> <img src="images/teal.jpg" alt=""> </div>
+	<div class="item"> <img src="images/TERRACOTA.jpg" alt=""> </div>
+	<div class="item"> <img src="images/BLACK.jpg" alt=""> </div>
+	<div class="item"> <img src="images/TEAL.jpg" alt=""> </div>
+	<div class="item"> <img src="images/BROWN.jpg" alt=""> </div>
+	<div class="item"> <img src="images/EQUESTRIAN.jpg" alt=""> </div>
+	<div class="item"> <img src="images/SAILOR.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblack.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimturq.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblue.jpg" alt=""> </div>
