--- a/talbots.html
+++ b/talbots.html
@@ -33,7 +33,7 @@
         <div class="item"> <img src="images/cwsoft.jpg" alt=""> </div>
         <div class="item"> <img src="images/cwblue.jpg" alt=""> </div>
 	<div class="item"> <img src="images/cwnatural.jpg" alt=""> </div>
-	<div class="item"> <img src="images/TERRACOTA.jpg" alt=""> </div>
+	<div class="item"> <img src="images/TERRACOTTA.jpg" alt=""> </div>
 	<div class="item"> <img src="images/BLACK.jpg" alt=""> </div>
 	<div class="item"> <img src="images/TEAL.jpg" alt=""> </div>
 	<div class="item"> <img src="images/BROWN.jpg" alt=""> </div>
