--- a/talbots.html
+++ b/talbots.html
@@ -34,11 +34,11 @@
 	<div class="item"> <img src="images/BROWN.jpg" alt=""> </div>
 	<div class="item"> <img src="images/EQUESTRIAN.jpg" alt=""> </div>
 	<div class="item"> <img src="images/SAILOR.jpg" alt=""> </div>
-        <div class="item"> <img src="images/cwblack.jpg" alt=""> </div>
-        <div class="item"> <img src="images/cwred.jpg" alt=""> </div>
-        <div class="item"> <img src="images/cwsoft.jpg" alt=""> </div>
-        <div class="item"> <img src="images/cwblue.jpg" alt=""> </div>
-	<div class="item"> <img src="images/cwnatural.jpg" alt=""> </div>
+        <div class="item"> <img src="images/TARTAN.jpg" alt=""> </div>
+        <div class="item"> <img src="images/BLACKWATCH.jpg" alt=""> </div>
+        <div class="item"> <img src="images/SOFT.jpg" alt=""> </div>
+        <div class="item"> <img src="images/NEUTRAL.jpg" alt=""> </div>
+	<div class="item"> <img src="images/BLACKWHITE.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblack.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimturq.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblue.jpg" alt=""> </div>
