--- a/talbots.html
+++ b/talbots.html
@@ -38,10 +38,7 @@
         <div class="item"> <img src="images/BLACKWATCH.jpg" alt=""> </div>
         <div class="item"> <img src="images/SOFT.jpg" alt=""> </div>
 	<div class="item"> <img src="images/BLACKWHITE.jpg" alt=""> </div>
-	<div class="item"> <img src="images/homeblue.jpg" alt=""> </div>
-        <div class="item"> <img src="images/homesoft.jpg" alt=""> </div>
-	<div class="item"> <img src="images/homegreen.jpg" alt=""> </div>
-	<div class="item"> <img src="images/homered.jpg" alt=""> </div>
+	<div class="item"> <img src="images/LOUNGE.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblack.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimturq.jpg" alt=""> </div>
         <div class="item"> <img src="images/swimblue.jpg" alt=""> </div>
